--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,11 +17,11 @@ build:
 requirements:
   host:
     - pip
-    - python
+    - python >=3.7
   run:
     - future
     - numpy >=1.7.0, <1.24.0
-    - python
+    - python >=3.7
     - scipy >=1.0.0
     - six
 
