--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "mir_eval" %}
 {% set version = "0.7" %}
+{% set python_min = "3.7" %}
 
 package:
   name: {{ name|lower }}
@@ -17,18 +18,18 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.7
+    - python {{ python_min }}
     - setuptools >=48
   run:
     - future
     - numpy >=1.7.0, <1.24.0
-    - python >=3.7
+    - python >={{ python_min }}
     - scipy >=1.0.0
     - six
 
 test:
   requires:
-    - python >=3.7
+    - python {{ python_min }}
   imports:
     - mir_eval
 
